RESOLVED FIXED12630
<use> cursor not changing (to hand) on hover
https://bugs.webkit.org/show_bug.cgi?id=12630
Summary <use> cursor not changing (to hand) on hover
jay
Reported 2007-02-06 01:34:41 PST
cursor should cahnge to hand on hover over a link in default case.
Attachments
look: No Hands (678 bytes, image/svg+xml)
2007-02-06 01:41 PST, jay
no flags
A much nicer test case (352 bytes, image/svg+xml)
2007-02-06 05:00 PST, Eric Seidel (no email)
no flags
fix and manual test (1.91 KB, patch)
2007-06-01 03:57 PDT, Eric Seidel (no email)
lars.knoll: review+
jay
Comment 1 2007-02-06 01:41:34 PST
Created attachment 12962 [details] look: No Hands
Eric Seidel (no email)
Comment 2 2007-02-06 05:00:29 PST
Created attachment 12967 [details] A much nicer test case
Eric Seidel (no email)
Comment 3 2007-02-06 05:02:07 PST
A few things were wrong with the original test case: 1. it was uploaded as image/svg-xml. That's incorrect. The final SVG 1.1 spec uses image/svg+xml. 2. it used fill='eee', that worked OK in Safari (and would have in IE) but it isn't valid by the SVG spec. fill='#eee' would have been correct.
jay
Comment 4 2007-02-06 05:28:27 PST
bugzilla autodetect for mozilla and safari uploads as image/svg-xml
Eric Seidel (no email)
Comment 5 2007-02-06 05:40:10 PST
The patch attached to bug 12580 is a step in the right direction. However it's still not quite fixed. This shouldn't be hard to fix, but I should probably speak with WildFox first.
Eric Seidel (no email)
Comment 6 2007-02-06 05:40:59 PST
That's odd. When I upload from Safari, bugzilla correctly autodetects image/svg+xml
jay
Comment 7 2007-02-06 07:17:37 PST
likely Opera...
David Kilzer (:ddkilzer)
Comment 8 2007-02-06 08:14:41 PST
(In reply to comment #7) > likely Opera... Usually the operating system plays a role in file types as well. In Windows, it's the registry. In Linux, it's /etc/mime.types.
Eric Seidel (no email)
Comment 9 2007-06-01 03:57:55 PDT
Created attachment 14824 [details] fix and manual test I'm pretty certain this is the correct fix. The only thing which could possibly be wrong is if Layer::hitTest has some caller which wouldn't want to know the URLElement ignoring shadow nodes. Such a caller seems highly unlikely since URLElement is only used by link hover code AFAIK.
Eric Seidel (no email)
Comment 10 2007-06-01 04:31:14 PDT
Landed as r21937 on the feature-branch. Yet another change which probably should move to TOT.
Note You need to log in before you can comment on or make changes to this bug.