2007-06-01  Eric Seidel  <eric@webkit.org>

Reviewed by lars.

        Cursor does not change to hand over links containing <use>
        http://bugs.webkit.org/show_bug.cgi?id=12630

        Test: manual-tests/svg-link-hover-use.svg

        * manual-tests/svg-link-hover-use.svg: Added.
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::hitTest): use eventParentNode instead of parentNode



Canonical link: https://commits.webkit.org/20382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26392 268f45cc-cd09-0410-ab3c-d52691b4dbfc